namespace/bank-integration/bank-integrations/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: localdevelopment
  labels:
    istio-injection: enabled
