namespace/bank-integration/bank-integrations/1-deployment-manifests.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: bank-integrations
  namespace: bank-integration
  labels:
    app.kubernetes.io/name: bank-integrations
    app: bank-integrations
spec:
  strategy:
    canary:
      minPodsPerReplicaSet: 2
      scaleDownDelaySeconds: 60
      scaleDownDelayRevisionLimit: 3
      trafficRouting:
        istio:
          virtualService:
            name: bank-integrations-virtual-service
            tcpRoutes:
              - port: 80
            routes:
              - primary
          destinationRule:
            name: bank-integrations-destination-rule
            canarySubsetName: canary
            stableSubsetName: stable
      maxSurge: 2
      maxUnavailable: 1
      steps:
        - setWeight: 50
        - pause: { duration: 3m }
        - setWeight: 100
        - pause: { duration: 30m }
  selector:
    matchLabels:
      app.kubernetes.io/name: bank-integrations
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bank-integrations
        app: bank-integrations
      annotations:
        traffic.sidecar.istio.io/excludeInboundPorts: "9101"
        proxy.istio.io/config: |
          terminationDrainDuration: 300s
          holdApplicationUntilProxyStarts: true
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
      terminationGracePeriodSeconds: 120
      containers:
        - name: bank-integrations
          imagePullPolicy: IfNotPresent
          image: bank-integration-local:v1.0.3
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 9101
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 9101
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 10
          startupProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 9101
              scheme: HTTP
            failureThreshold: 60
            periodSeconds: 15
            timeoutSeconds: 5
