namespace/bank-integration/bank-integrations/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-integrations
  labels:
    app.kubernetes.io/name: bank-integrations
    app: bank-integrations
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 9101
      targetPort: 9101
      protocol: TCP
  selector:
    app.kubernetes.io/name: bank-integrations
    app: bank-integrations
    istio: ingressgateway
