namespace/bank-integration/bank-integrations/1-ingress-bank-integration.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bank-integration-gw
  namespace: bank-integration
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
