namespace/bank-integration/bank-integrations/auth-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-policy
  namespace: bank-integration
spec:
  selector:
    matchLabels:
      app:  bank-integrations
  action: ALLOW
  rules:
    - to:
        - operation:
            hosts: ["*"]
            methods: ["GET", "HEAD", "POST", "PUT"]
            ports: ["80", "8080"]
